<resources>
    <string name="app_name">Parstagram</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="description">Description...</string>
    <string name="take_picture">Take Picture</string>
    <string name="submit">Submit</string>
    <string name="log_out">Log Out</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="home">Home</string>
    <string name="create">Create</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="post_picture">Post Picture</string>
    <string name="instagram_logo">Instagram Logo</string>
    <string name="parstagram_name">Parstagram Name</string>
</resources>