<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/instagram_home_outline_24"
        android:title="@string/home"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_compose"
        android:enabled="true"
        android:icon="@drawable/instagram_new_post_outline_24"
        android:title="@string/create"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@drawable/instagram_user_outline_24"
        android:title="@string/profile"
        app:showAsAction="always" />
</menu>